beautify fallback img of avatar

--- a/client/src/style/_utility.scss
+++ b/client/src/style/_utility.scss
@@ -25,6 +25,14 @@
   margin-bottom: 1rem;
 }
 
+.img-fallback {
+  text-align: center;
+
+  img {
+    clip-path: circle();
+  }
+}
+
 .round-img {
   border-radius: 50%;
 }
